--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ after_script:
   - git config user.email "eleven.chenxu@gmail.com"
   - git add .
   - git commit -m "Update docs"
-  - git push -force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
+  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
 
 env:
   global:
